--- a/template/base.html
+++ b/template/base.html
@@ -7,12 +7,21 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <style>
+    .bg-light {
+    background-color: #f19203!important;
+    }
+
+    </style>
 
     <title>Hello, world!{% block headtitle %} {% endblock headtitle %} </title>
   </head>
   <body>
-    {% block content %}
-    {% endblock content %}
+  {% include "components/navbar.html" %}
+  <div class="container">
+  {% block content %}
+  {% endblock content %}
+  </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
