--- a/template/pages/home.html
+++ b/template/pages/home.html
@@ -37,16 +37,23 @@ function handle_tweet_create_form_after_submit(event){
     const url = myForm.getAttribute("action")
     const method = myForm.getAttribute("method")
     const xhr = new XMLHttpRequest()
+    const responseType = "json"
+    xhr.responseType = responseType
     console.log(method, url)
     xhr.open(method, url)
     xhr.setRequestHeader("HTTP_X_REQUESTED_WITH","XMLHttpRequest") //We are calling ajax call already but in Django if we want to handle ajax call
     xhr.setRequestHeader("X-Requested-With","XMLHttpRequest")      //in python we need to use this.. check "def spirit_create_view()"
     xhr.onload = function(){
+
+       if (xhr.status === 201)   {
         const serverResponse = xhr.response
         console.log(xhr.status, serverResponse)
-        const tweetElem = document.getElementById("tweet")
-        load_tweets(tweetElem)
-
+        console.log(serverResponse.likes)
+        const newTweetElement = format_tweet_element(serverResponse)
+        console.log(newTweetElement)
+        //const tweetElem = document.getElementById("tweet")
+        //load_tweets(tweetElem)
+            }
     }
     xhr.send(myFormData)
 }
@@ -71,13 +78,13 @@ function load_tweets(tweetElements){
     xhr.onload = function() {
      const serverResponse = xhr.response
      var listedItems = serverResponse.response
-     console.log(listedItems)
+     //console.log(listedItems)
      var final_tweet = ''
      var i;
      for(i=0; i< listedItems.length; i++)
      {
-       console.log(i)
-       console.log(listedItems[i])
+       //console.log(i)
+       //console.log(listedItems[i])
        var tweet_obj = listedItems[i]
        current_items = format_tweet_element(tweet_obj)
        final_tweet += current_items
@@ -91,7 +98,7 @@ function load_tweets(tweetElements){
 load_tweets(tweetElem)
 
 function handled_id_like(tweet_id, current_count){
- console.log(tweet_id,current_count)
+ //console.log(tweet_id,current_count)
 }
 
 function like_button(tweet){
