--- a/template/pages/home.html
+++ b/template/pages/home.html
@@ -15,8 +15,9 @@
 <div class="row mb-3">
    <div class="col-md-4 mx-auto col-10">
       <form class="form" method="POST" id="tweet-create-form" action='/cr_spirit/'>{% csrf_token %}
+          <div class="d-none alert alert-danger" id="tweet-create-form-error"></div>
          <input type="hidden" value='/' name="next"/>
-         <textarea class="form-control" name="content" placeholder="Share your SPIRIT"></textarea>
+         <textarea class="form-control" required="required" name="content" placeholder="Share your SPIRIT"></textarea>
          <button type="submit" class="btn btn primary">SUBMIT</button>
 
       </form>
@@ -30,6 +31,17 @@
 
 <script>
 
+//This function gets called when there is an 400 error in the tweet
+function handle_tweet_form_error(msg, display){
+    var myErrorDiv = document.getElementById("tweet-create-form-error")
+    if (display === true){
+        myErrorDiv.setAttribute("class", "d-block alert alert-danger")
+        myErrorDiv.innerText = msg
+    }
+    else{
+        myErrorDiv.setAttribute("class", "d-none alert alert-danger")
+    }
+}
 function handle_tweet_create_form_after_submit(event){
     event.preventDefault()
     const myForm = event.target
@@ -46,14 +58,47 @@ function handle_tweet_create_form_after_submit(event){
     xhr.onload = function(){
 
        if (xhr.status === 201)   {
+        handle_tweet_form_error("",false)
         const serverResponse = xhr.response
         console.log(xhr.status, serverResponse)
         console.log(serverResponse.likes)
         const newTweetElement = format_tweet_element(serverResponse)
         console.log(newTweetElement)
+        const ogHtml = tweetElem.innerHTML
+        tweetElem.innerHTML = newTweetElement + ogHtml
+        myForm.reset()
         //const tweetElem = document.getElementById("tweet")
         //load_tweets(tweetElem)
             }
+        else if (xhr.status === 400){
+            const errorJson =  xhr.response
+            console.log(errorJson)
+            const contentError = errorJson.content
+            let contentErrorMsg;
+            if (contentError) {
+                contentErrorMsg = contentError[0]
+                if (contentErrorMsg) {
+                    handle_tweet_form_error(contentErrorMsg, true)
+                }
+                else {
+                    alert("An error occured. Please try again")
+                }
+            }
+            else{
+                alert("An error occured. Please try again")
+            }
+        }
+        else if (xhr.status === 403){
+            alert("There was an error please try again.")
+            window.location.href = '/login'
+         }
+         else if (xhr.status === 500){
+            alert("There was an error please try again.")
+         }
+
+    }
+    xhr.onerror = function() {
+        alert("An error occurred please try again later")
     }
     xhr.send(myFormData)
 }
@@ -77,7 +122,7 @@ function load_tweets(tweetElements){
     xhr.open(method, url)
     xhr.onload = function() {
      const serverResponse = xhr.response
-     var listedItems = serverResponse.response
+     var listedItems = serverResponse
      //console.log(listedItems)
      var final_tweet = ''
      var i;
