--- a/template/pages/home.html
+++ b/template/pages/home.html
@@ -14,7 +14,7 @@
 
 <div class="row mb-3">
    <div class="col-md-4 mx-auto col-10">
-      <form class="form" method="POST" id="tweet-create-form" action='/cr_spirit/'>{% csrf_token %}
+      <form class="form" method="POST" id="tweet-create-form" action='cr_spirit/'>{% csrf_token %}
           <div class="d-none alert alert-danger" id="tweet-create-form-error"></div>
          <input type="hidden" value='/' name="next"/>
          <textarea class="form-control" required="required" name="content" placeholder="Share your SPIRIT"></textarea>
@@ -125,7 +125,7 @@ function load_tweets(tweetElements){
     tweetElements.innerHTML = 'Loading...'
     const xhr = new XMLHttpRequest()
     const method = 'GET'
-    const url = "/spirit"
+    const url = "/home/api/spirit/spirit"
     const responseType = "json"
     var el1 = "<h3>Hi there</h3>"
     var el2 = "<h3>Hi there</h3>"
@@ -156,14 +156,14 @@ function load_tweets(tweetElements){
 
 load_tweets(tweetElem)
 
-function handled_tweet_action(tweet_id, current_count){
+function handled_tweet_action(tweet_id, current_count, action){
 //console.log(">>>>>>>>>>",tweet_id,current_count)
 console.log(">>>>>>>>>>",tweet_id,current_count)
-const url = "api/spirit/action"
+const url = "action/"
 const method = "POST"
 const data = JSON.stringify({
     id: tweet_id,
-    action: "like"
+    action: action
 })
 const xhr = new XMLHttpRequest()
 const csrftoken = getCookie('csrftoken'); //https://stackoverflow.com/questions/20504846/why-is-it-common-to-put-csrf-prevention-tokens-in-cookies
@@ -184,8 +184,8 @@ return
 }
 
 function spirit_button(tweet){
-button_unlike = "<button class='btn btn-outline-success btn-sm' type='button' onclick= handled_tweet_action("+ tweet.id +","+tweet.likes+ ",'spirit')>Spirit</button>"
-return button_unlike
+button_re_spirit = "<button class='btn btn-outline-success btn-sm' type='button' onclick= handled_tweet_action("+ tweet.id +","+tweet.likes+ ",'re-spirit')>Re-Spirit</button>"
+return button_re_spirit
 }
 
 function unlike_button(tweet){
